Improved the modal dialogs by slightly restructuring UI input management